styles/common.css
/* - Font sizes (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */

/* - Spacing system (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */

:root {
  --primary-color: #3b5bdb;
  --primary-dark-color: #364fc7;
  --secondary-color: #4dabf7;
  --primary-text-color: #edf2ff;
  --primary-grey: #495057;
  --secondary-grey: #a5a8aa;
  --progress-start-color: #f9bcca;
  --success-message: #05b322;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
  overscroll-behavior: auto;
  background-color: var(--primary-dark-color);
}

body {
  height: 100vh;
  font-family: "Roboto Slab", serif;
  line-height: 1.4;
  font-weight: 400;
  color: var(--primary-text-color);
  font-size: 1.5rem;
}

h1 {
  font-size: 5rem;
}

h2 {
  text-transform: uppercase;
  font-size: 3rem;
  padding-bottom: 20px;
  margin-bottom: 40px;
  width: 90%;
  max-width: 1080px;
  text-align: center;
  border-bottom: 1px solid #fff;
}

p {
  font-size: 1.8rem;
}

a {
  text-decoration: none;
  cursor: pointer;
}

/* .bg--fixed {
  position: absolute;
  background-image: linear-gradient(
      rgba(36, 42, 46, 0.6),
      rgba(36, 42, 46, 0.6)
    ),
    url("../assets/images/main/mobile-bg.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
} */

.top {
  --offset: 50px;
  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.15);
  position: sticky;
  bottom: 15%;
  left: 96%;
  place-self: end;
  margin-top: calc(100vh + var(--offset));
  /* visual styling */
  text-decoration: none;
  padding: 10px 15px;
  font-family: sans-serif;
  color: #fff;
  background: var(--primary-color);
  border-radius: 100px;
  white-space: nowrap;
}

.btn {
  background-color: var(--primary-color);
  color: #fff;
  font-weight: 700;
  margin-bottom: 10px;
  margin-left: 10px;
  padding: 10px 15px;
  border: 1px solid #fff;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.5s ease-out, transform 0.3s ease-in,
    color 0.5s ease-out;
  display: inline-block;
  font-weight: 700;
  min-width: 80px;
  text-align: center;
}

.btn:hover {
  background-color: var(--secondary-color);
  color: #fff;

  transform: translateY(-5px);
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
}

.btn:active {
  transform: translateY(5px);
  box-shadow: none;
}

.btn--secondary {
  background-color: var(--primary-grey);
}

.btn--secondary:hover {
  background-color: var(--secondary-grey);
  color: var(--primary-text-color);
}

.bg--body {
  background: linear-gradient(
    -45deg,
    var(--secondary-color),
    var(--primary-color),
    var(--primary-color),
    var(--secondary-color)
  );
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  opacity: 0.9;
  /* animation: gradient 10s ease infinite; */
}

/* @keyframes gradient {
  0% {
    background-position: 0% 25%;
  }
  50% {
    background-position: 100% 25%;
  }
  100% {
    background-position: 0% 25%;
  }
}  */

.bg--gradient {
  background: linear-gradient(
    -45deg,
    var(--secondary-color),
    var(--primary-dark-color),
    var(--primary-dark-color),
    var(--secondary-color)
  );
  background-size: 100% 100%;
  opacity: 0.9;
}

@media (max-width: 768px) {
  .bg--animation {
    animation: none;
  }
}

/* @media (min-width: 1024px) {
  .bg--fixed {
    background-image: linear-gradient(
        rgba(36, 42, 46, 0.6),
        rgba(36, 42, 46, 0.6)
      ),
      url("../assets/images/main/desktop-bg.jpg");
  }
} */
/* 
@media (min-width: 2560px) {
  h1 {
    font-size: 10rem;
  }
  h2 {
    font-size: 6.5rem;
  }
  .btn {
    padding: 10px 20px;
    border-radius: 10px;
    font-size: 3rem;
  }
  .container {
    max-width: 1400px;
  }
} */

